--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/miteshkumar77/miteshkumar77.github.io",
+  "homepage": "https://miteshkumar77.github.io/homepage",
   "name": "homepage",
   "version": "0.1.0",
   "private": true,
